# UFC-Scraper-ML

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  example_event.html  pyproject.toml  requirements.txt
output/: best_model_report.txt  fighters_data.json  last_event.json  model_results.json  ufc_events_detailed.json  ufc_fighters.csv  ufc_fighters_data.csv  ufc_fights.csv
output/models/: BernoulliNBModel.joblib  EloBaselineModel.joblib  LGBMModel.joblib  LogisticRegressionModel.joblib  RandomForestModel.joblib  SVCModel.joblib  XGBoostModel.joblib
scripts/: README.md  startup_check.ps1  update_models.ps1  update_models.sh
src/: __init__.py  analyze.py  args.py  config.py  main.py  preprocess.py  scrape_fights.py  to_csv.py
src/analysis/: __init__.py  elo.py
src/predict/: config.py  main.py  models.py  pipeline.py  predict.py  predict_new.py  preprocess.py  save_model.py  utils.py
src/scrape/: __init__.py  config.py  main.py  preprocess.py  scrape_fighters.py  scrape_fights.py  to_csv.py
