[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ufc_predictor"
version = "0.1.0"
authors = [
  { name="Álvaro Menéndez Ros", email="alvaro.mrgr@gmail.com" },
]
description = "A model for predicting UFC fight outcomes."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gradio==4.28.3",
    "scikit-learn==1.4.2",
    "pandas==2.2.2",
    "xgboost==2.0.3",
    "lightgbm==4.3.0",
    "joblib==1.4.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["find:"] 