[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ufc_predictor"
version = "0.1.0"
authors = [
  { name="Álvaro Menéndez Ros", email="alvaro.mrgr@gmail.com" },
]
description = "A model for predicting UFC fight outcomes."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["find:"] 